login activity, signup textView minor update

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -60,7 +60,8 @@
             android:id="@+id/newAccountBtn_as_student_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="6dp"
+            android:padding="10dp"
             android:layout_above="@+id/or_id"
             android:onClick="btnClicked"
             android:gravity="center"
@@ -83,7 +84,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="btnClicked"
-            android:layout_marginBottom="30dp"
+            android:padding="10dp"
+            android:layout_marginBottom="20dp"
             android:layout_alignParentBottom="true"
             android:gravity="center"
             android:textColor="#ffffff"
