--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -56,18 +56,19 @@
             android:onClick="btnClicked"
             android:background="@drawable/ic_login_button"/>
 
-        <TextView
+        <Button
             android:id="@+id/newAccountBtn_as_student_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="6dp"
-            android:padding="10dp"
-            android:layout_above="@+id/or_id"
+            android:layout_marginBottom="16dp"
+            android:layout_above="@+id/newAccountBtn_as_teacher_id"
             android:onClick="btnClicked"
             android:gravity="center"
             android:textColor="#ffffff"
-            android:text="SIGNUP AS STUDENT" />
+            android:text="SIGNUP AS STUDENT"
+            android:background="@drawable/singup_student_button"/>
 
+<!--
         <TextView
             android:id="@+id/or_id"
             android:layout_width="match_parent"
@@ -77,18 +78,19 @@
             android:text="OR"
             android:textColor="#ff4444"
             android:layout_marginBottom="16dp"/>
+-->
 
 
-        <TextView
+        <Button
             android:id="@+id/newAccountBtn_as_teacher_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="btnClicked"
-            android:padding="10dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="30dp"
             android:layout_alignParentBottom="true"
             android:gravity="center"
             android:textColor="#ffffff"
+            android:background="@drawable/singup_teacher_button"
             android:text="SIGNUP AS TEACHER" />
 
     </RelativeLayout>
