--- a/app/src/main/res/layout/teacher_personal_info_layout.xml
+++ b/app/src/main/res/layout/teacher_personal_info_layout.xml
@@ -8,6 +8,13 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <Button
+            android:id="@+id/edit_save_personal_info_btn_id"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_gravity="right"
+            android:background="@drawable/ic_mode_edit_black_48dp"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
