--- a/app/src/main/res/layout/teacher_personal_info_layout.xml
+++ b/app/src/main/res/layout/teacher_personal_info_layout.xml
@@ -80,7 +80,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="FB id : " />
+                android:text="Face Book id : " />
 
             <EditText
                 android:id="@+id/fb_edit_view_id"
